--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,9 +1,9 @@
 name: Cigro Data Scraping
 
 on:
-  # 매일 오전 9시 (한국시간)에 자동 실행
+  # 매일 오전 8시 (한국시간)에 자동 실행
   schedule:
-    - cron: '0 0 * * *'  # UTC 기준 자정 (한국시간 오전 9시)
+    - cron: '0 23 * * *'  # UTC 기준 23시 (한국시간 오전 8시)
   
   # 수동 실행 가능
   workflow_dispatch:
