--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@vercel/kv": "^3.0.0",
     "bcryptjs": "^3.0.2",
     "next": "15.5.6",
     "next-auth": "^4.24.11",
