Fix Vercel routing for NextAuth API routes

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,15 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "app/api/$1",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate",
+        "Pragma": "no-cache",
+        "Expires": "0"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "app/$1",
       "headers": {
