--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,10 @@
       "src": "app/package.json",
       "use": "@vercel/next"
     }
-  ]
+  ],
+  "functions": {
+    "app/src/app/api/auth/[...nextauth]/route.ts": {
+      "maxDuration": 30
+    }
+  }
 }
