--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app/package.json",
-      "use": "@vercel/next"
-    }
-  ],
-  "functions": {
-    "app/src/app/api/auth/[...nextauth]/route.ts": {
-      "maxDuration": 30
-    }
-  }
+  "version": 2
 }
