--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/api/auth/(.*)",
+      "dest": "app/api/auth/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "app/$1"
     }
