Fix NextAuth routing path in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/api/auth/(.*)",
-      "dest": "app/api/auth/$1"
+      "dest": "app/src/app/api/auth/$1"
     },
     {
       "src": "/(.*)",
