--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@vercel/kv": "^3.0.0",
     "bcryptjs": "^3.0.2",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
